# Ut99PubSrc

./: .gitignore  CMakeLists.txt  README-EPIC.md  README.md
Audio/: CMakeLists.txt
Core/: CMakeLists.txt
Core/Inc/: FCodec.h  FFileManagerGeneric.h  FMallocWindows.h  UnTemplate.h
D3DDrv/: CMakeLists.txt
D3DDrv/Src/: D3DDrv.h  Direct3D7.cpp
Engine/: CMakeLists.txt
Engine/Inc/: UnActor.h  UnModel.h
Help/: PACKAGES.md
OpenGLDrv/: CMakeLists.txt
OpenGLDrv/Src/: OpenGL.cpp
SampleNativePackage/: CMakeLists.txt
SamplePackage/: CMakeLists.txt
Setup/: CMakeLists.txt
Setup/Src/: Setup.cpp  USetupDefinition.cpp  USetupDefinitionWindows.cpp
UCC/: CMakeLists.txt
UCC/Src/: UCC.cpp
Window/: CMakeLists.txt
Window/Inc/: Window.h
XDrv/: CMakeLists.txt
XLaunch/: CMakeLists.txt
XMesaGLDrv/: CMakeLists.txt
