set(SAMPLENATIVEPACKAGE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(SAMPLENATIVEPACKAGE_CLASSES_PATH ${SAMPLENATIVEPACKAGE_PATH}/Classes)
set(SAMPLENATIVEPACKAGE_INC_PATH ${SAMPLENATIVEPACKAGE_PATH}/Inc)
set(SAMPLENATIVEPACKAGE_SRC_PATH ${SAMPLENATIVEPACKAGE_PATH}/Src)
set(SAMPLENATIVEPACKAGE_FILES_CLASSES ${SAMPLENATIVEPACKAGE_CLASSES_PATH}/SampleClass.uc)
set(SAMPLENATIVEPACKAGE_FILES_INC
    ${SAMPLENATIVEPACKAGE_INC_PATH}/SampleNativePackage.h
    ${SAMPLENATIVEPACKAGE_INC_PATH}/SampleNativePackageClasses.h)
set(SAMPLENATIVEPACKAGE_FILES_SRC ${SAMPLENATIVEPACKAGE_SRC_PATH}/SampleClass.cpp)
set(UNREALSCRIPT_CLASSES
    ${UNREALSCRIPT_CLASSES}
    ${SAMPLENATIVEPACKAGE_FILES_CLASSES}
    PARENT_SCOPE)
set(UNREALSCRIPT_HEADERS
    ${UNREALSCRIPT_HEADERS}
    ${SAMPLENATIVEPACKAGE_INC_PATH}/SampleNativePackageClasses.h
    PARENT_SCOPE)
set(UNREALSCRIPT_MODULES
    ${UNREALSCRIPT_MODULES}
    ${SYSTEM_DIR}/SampleNativePackage.u
    PARENT_SCOPE)
set_source_files_properties(${SAMPLENATIVEPACKAGE_INC_PATH}/SampleNativePackageClasses.h
    PROPERTIES GENERATED TRUE)
add_library(SampleNativePackage MODULE
    ${SAMPLENATIVEPACKAGE_FILES_CLASSES}
    ${SAMPLENATIVEPACKAGE_FILES_INC}
    ${SAMPLENATIVEPACKAGE_FILES_SRC})
source_group(Classes FILES ${SAMPLENATIVEPACKAGE_FILES_CLASSES})
source_group(Inc FILES ${SAMPLENATIVEPACKAGE_FILES_INC})
source_group(Src FILES ${SAMPLENATIVEPACKAGE_FILES_SRC})
target_compile_definitions(SampleNativePackage
    PRIVATE
        SAMPLENATIVEPACKAGE_EXPORTS
        ThisPackage=SampleNativePackage)
target_include_directories(SampleNativePackage PUBLIC ${SAMPLENATIVEPACKAGE_INC_PATH})
target_link_libraries(SampleNativePackage Core Engine)
add_dependencies(SampleNativePackage UnrealScript)
