set(WINDOW_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(WINDOW_INC_PATH ${WINDOW_PATH}/Inc)
set(WINDOW_LIB_PATH ${WINDOW_PATH}/Lib)
set(WINDOW_SRC_PATH ${WINDOW_PATH}/Src)
set(WINDOW_FILES_INC ${WINDOW_INC_PATH}/Window.h)
set(WINDOW_FILES_SRC_RES ${WINDOW_SRC_PATH}/Res/WindowRes.h)
add_library(Window INTERFACE)
source_group(Inc FILES ${WINDOW_FILES_INC})
source_group(Src\\Res FILES ${WINDOW_FILES_SRC_RES})
target_include_directories(Window INTERFACE ${WINDOW_INC_PATH})
if(WIN32)
    target_link_libraries(Window INTERFACE ${WINDOW_LIB_PATH}/Window.lib)
else(WIN32)
    target_link_libraries(Window INTERFACE -lWindow)
endif(WIN32)
